# BoogleSearch

./: README.md  autocomplete.py  main.py  pyproject.toml
templates/: index.html
