[tool.poetry]
name = "boogle_search"
version = "1.0.0"
description = "An implementation of \"A New Google\" by Daniel Gross"
authors = ["Kyle Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
markupsafe = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
